# euchre

./: .gitignore  Cargo.toml  README.md
src/: main.rs  neural_network.rs
src/cli/: helpers.rs
src/euchre/: constants.rs  enums.rs  game.rs  game_helpers.rs  mod.rs  neural_network_helpers.rs  types.rs
src/organism/: evolution.rs  helpers.rs  mod.rs  neural_network.rs
