[package]
name = "euchre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_derive = "0.5.0"
lazy_static = "1.4.0"
strum = "0.26"
strum_macros = "0.26"
structopt = "0.3.26"
serde = { version = "1.0", features = ["derive"] }
